--- a/assets/css/templatemo-finance-business.css
+++ b/assets/css/templatemo-finance-business.css
@@ -309,8 +309,8 @@ header .navbar {
 .navbar .navbar-nav .nav-link.current,
 .navbar .navbar-nav .nav-link.show,
 .navbar .navbar-nav .show>.nav-link {
-	color: #000;
-	border-bottom: 3px solid #000;
+	color: #A4C639;
+	border-bottom: 3px solid #A4C639;
 
 }
 .st
@@ -466,18 +466,21 @@ ul.slick-dots {
   color:#a4c639;
   animation:fadeOutRight 1s both;
   margin-left: -65px;
-   text-shadow: 2px 1.5px #fff;
+   
 }
 
 .Modern-Slider .item h4 {
+	text-align: right;
   margin-bottom: 30px;
   text-transform: uppercase;
-  font-size: 44px;
+  font-size: 30px;
   font-weight: 700;
   letter-spacing: 2.5px;
   color:#FFF;
   overflow:hidden;
   animation:fadeOutLeft 1s both;
+  margin-right: -20px;
+  text-shadow: 3px 3px darkred;
 }
 
 .Modern-Slider .item p {
